[package]
name = "mcp9600"
version = "0.2.0"
edition = "2021"
description = "Basic embedded-hal-based I2C driver for the MCP9600 and MCP9601 thermocouple amplifier ICs"
repository = "https://github.com/besselfunct/mcp9600"
license = "MIT"
keywords = ["thermocouple","I2C","embedded"]
categories = ["embedded"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = "1.0.0"

# Disable std features for #![no_std] targets
[dependencies.bitvec]
version = "~1.0"
default-features = false
features = ["atomic", "alloc"]
